# Polymarket

./: .gitignore  README.md
crypto_up_or_down/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  process-compose.yaml  pyproject.toml  unclassified_markets.jsonl
crypto_up_or_down/docs/: Volatility Acceleration.txt  alternative_strat_ideas.txt  dev-workflow.md  potential_ideas.md  slowquant.md  superslowquant_plan.txt  todays_research.md  turtlequant_plan.md
crypto_up_or_down/models/: apex_ml_btc_15m.json  apex_ml_btc_5m.json  apex_ml_eth_15m.json  apex_ml_eth_5m.json  apex_ml_sol_5m.json  apex_ml_summary.json  apex_ml_xrp_5m.json
crypto_up_or_down/scripts/: grafana_exporter.py  grafana_loader.py  grafana_patch_dashboard.py  run_deepanal.py
finger_blaster/: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
finger_blaster/src/: __init__.py
turtlequant/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
turtlequant/data/: .gitignore
turtlequant/scripts/: calibrate_slowquant.py  calibrate_turtlequant.py  grafana_exporter.py  monitor_all.py  monitor_slowquant.py  monitor_turtlequant.py  slowquant_bot.py  turtlequant_bot.py
turtlequant/src/turtlequant/: __init__.py  market_parser.py  market_scanner.py  position_manager.py  vol_surface.py
turtlequant/src/turtlequant/data/: __init__.py
turtlequant/src/turtlequant/slowquant/: __init__.py  opportunity_ranker.py  strategy_loop.py
turtlequant/tests/: test_imports.py
(+126 files in other folders)
